--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a {
     justify-content: center;
     width: 100%;
     position: fixed;
-    padding: 2em 3em;
+    padding: 1em 3em;
     z-index: 20;
 }
 
@@ -54,7 +54,7 @@ a {
     justify-content: space-between;
 }
 
-.nav-link {
+.link {
     padding: 0 1.5em;
     font-size: 20px;
     font-weight: 500;
